# equals

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  crc32.cpp  crc32.h  main.cpp  tcp.h
src/: App.cpp  App.h  CMakeLists.txt  Entry.cpp  Entry.h  EqualityTable.cpp  EqualityTable.h  FontRenderer.cpp  FontRenderer.h  Main.cpp
src/font/: JetBrainsMono-Regular.c  JetBrainsMono-Regular.h  font_to_source.py
